--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -60,8 +60,20 @@
     </div>
 </div>
 
-{{ template "_internal/google_analytics.html" . }}
+ 
 {{ partial "footer_scripts" . }}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114584643-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-114584643-1');
+</script>
+
 
 </body>
 </html>
