--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -2,6 +2,7 @@
 <html lang="{{ .Site.LanguageCode }}">
 
 {{ partial "head.html" . }}
+<meta content="{{ delimit .Keywords ", " }}" name="keywords">
 
 <body>
 
