--- a/site/themes/cocoa-eh/layouts/partials/disqus.html
+++ b/site/themes/cocoa-eh/layouts/partials/disqus.html
@@ -1,4 +1,5 @@
 <div id="disqus_thread"></div>
+disqusshortname = "zswarth"
 <script>
 (function() {
 var d = document, s = d.createElement('script');
